--- a/Dashboard_HR.html
+++ b/Dashboard_HR.html
@@ -11,7 +11,7 @@
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzAijcj7vNQID_anRwaSsSi_A3RRyWjTeCadJ-LG9Lx0ktJ48YLKraOamTuFDheO9DvTg/exec";
     const LOGIN_URL = "Index_HR.html";
-    const TARGET_URL = "https://script.google.com/macros/s/AKfycbyYwH8RlL255Zfc6NgwEn7bH7LHHVUyT2Ls_fhM7QgMmFvKilEZn7QkXXWi2s_7Gbax/exec";
+    const TARGET_URL = "https://sarawutc6689-cpu.github.io/Mouldmate-HR/hr-p3.html";
 
     function checkAuth() {
       const token = localStorage.getItem("authToken");
