--- a/Dashboard_IT.html
+++ b/Dashboard_IT.html
@@ -11,7 +11,7 @@
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzAijcj7vNQID_anRwaSsSi_A3RRyWjTeCadJ-LG9Lx0ktJ48YLKraOamTuFDheO9DvTg/exec";
     const LOGIN_URL = "Index_IT.html";
-    const TARGET_URL = "https://script.google.com/macros/s/AKfycbwtQD21OonU64sim8PO9Pv6Be3_Dn2J_gQQ0yekO8yBL1w8ZIhJl0s81cZP6q7TBnvq-g/exec";
+    const TARGET_URL = "https://sarawutc6689-cpu.github.io/Mouldmate-IT/it-home.html";
 
     function checkAuth() {
       const token = localStorage.getItem("authToken");
@@ -47,6 +47,7 @@
   </script>
 </body>
 </html>
+
 
 
 
