--- a/ID_HR.html
+++ b/ID_HR.html
@@ -423,8 +423,8 @@
   </div>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzAijcj7vNQID_anRwaSsSi_A3RRyWjTeCadJ-LG9Lx0ktJ48YLKraOamTuFDheO9DvTg/exec";
-    const DASHBOARD_URL = "Dashboard_HR.html";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzBqUnXnvkaeyF2EmUjgP2WsSY33XIHWWTo543II5Gk4tzFfzVRFKAQ933njowuKtU/exec";
+    const DASHBOARD_URL = "DB_HR.html";
 
     // เพิ่มฟังก์ชันสำหรับการกด Enter
     document.addEventListener('DOMContentLoaded', function() {
