--- a/DB_HR.html
+++ b/DB_HR.html
@@ -9,8 +9,8 @@
   <p>กรุณารอสักครู่ ระบบกำลังนำท่านไปยังหน้าหลัก</p>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzAijcj7vNQID_anRwaSsSi_A3RRyWjTeCadJ-LG9Lx0ktJ48YLKraOamTuFDheO9DvTg/exec";
-    const LOGIN_URL = "Index_HR.html";
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzBqUnXnvkaeyF2EmUjgP2WsSY33XIHWWTo543II5Gk4tzFfzVRFKAQ933njowuKtU/exec";
+    const LOGIN_URL = "ID_HR.html";
     const TARGET_URL = "https://sarawutc6689-cpu.github.io/Mouldmate-HR/hr-p3.html";
 
     function checkAuth() {
